--- a/AplicacionWeb/Views/Auth/Login.cshtml
+++ b/AplicacionWeb/Views/Auth/Login.cshtml
@@ -12,47 +12,71 @@
 </head>
 <body>
 
-    <div class="container mt-5 pt-5">
-
-        <div class="row justify-content-center">
-            <div class="col-12 col-xl-4 col-md-6">
-
-                <div class="card">
-                    <div class="card-header">
-                        Iniciar Sesion
-                    </div>
-                    <div class="card-body">
-
-                        <form asp-controller="Auth" asp-action="Login" method="post">
-
-                            <input class="form-control mb-3" type="text" placeholder="Correo" required name="Correo" />
-                            <input class="form-control mb-3" type="password" placeholder="Contraseña" required name="Password" />
-                            <div class="d-grid gap-2 mb-3">
-                                <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
-                            </div>
-                            @if (ViewData["Mensaje"] != null)
-                            {
-
-                                <div class="form-group">
-                                    <div class="alert alert-danger" role="alert">
-                                        @ViewData["Mensaje"]
-                                    </div>
-                                </div>
-                            }
-                            ¿No tienes una cuenta? <a href="@Url.Action("Register","Auth")"> Registraste!</a>
-
-                        </form>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <section class="vh-100" style="background-color: #9A616D;">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-xl-10">
+                    <div class="card" style="border-radius: 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                            </div>
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                <div class="card-body p-4 p-lg-5 text-black">
+
+                                    <form asp-controller="Auth" asp-action="Login" method="post">
+
+                                        <div class="d-flex align-items-center mb-3 pb-1">
+                                            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                            <span class="h1 fw-bold mb-0">Logo</span>
+                                        </div>
+
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Inicia Sesión en su cuenta</h5>
+
+                                        <div class="form-outline mb-4">
+                                            <input type="email" id="form2Example17" class="form-control form-control-lg " required name="Correo" />
+                                            <label class="form-label" for="form2Example17">Correo Electronico</label>
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            <input type="password" id="form2Example27" class="form-control form-control-lg" required name="Password" />
+                                            <label class="form-label" for="form2Example27">Contraseña</label>
+                                        </div>
+
+                                        @if (ViewData["Mensaje"] != null)
+                                        {
+
+                                            <div class="form-group">
+                                                <div class="alert alert-danger" role="alert">
+                                                    @ViewData["Mensaje"]
+                                                </div>
+                                            </div>
+                                        }
+
+                                        <div class="pt-1 mb-4">
+                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                        </div>
+
+                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">
+                                            ¿No tienes una cuenta? <a href="@Url.Action("Register","Auth")"
+                                                                      style="color: #393f81;">Registrate Aqui</a>
+                                        </p>
+                                        @* <a href="#!" class="small text-muted">Terms of use.</a>
+                                        <a href="#!" class="small text-muted">Privacy policy</a> *@
+                                    </form>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
