--- a/AplicacionWeb/Views/Auth/Login.cshtml
+++ b/AplicacionWeb/Views/Auth/Login.cshtml
@@ -15,58 +15,60 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-    <section class="vh-100" style="background-color: #9A616D;">
+    <section class="vh-100 bg-light">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
-                            <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+
+                            <div class="col-md-6 col-lg-5 d-none d-md-flex align-items-center">
+                                <img src="/img/login.jpg"
+                                     alt="login form" class="img-fluid pt-xl-4" style="border-radius: 1rem 0 0 1rem;" />
                             </div>
-                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center shadow">
                                 <div class="card-body p-4 p-lg-5 text-black">
 
-                                    <form asp-controller="Auth" asp-action="Login" method="post">
+                                    <form asp-controller="Auth" asp-action="Login" method="post" class="needs-validation" novalidate>
 
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                             <span class="h1 fw-bold mb-0">Logo</span>
                                         </div>
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Inicia Sesión en su cuenta</h5>
+                                        <h5 class="fw-normal mb-3 pb-3 text-uppercase" style="letter-spacing: 1px;">Iniciar Sesión</h5>
 
                                         <div class="form-outline mb-4">
-                                            <input type="email" id="form2Example17" class="form-control form-control-lg " required name="Correo" />
-                                            <label class="form-label" for="form2Example17">Correo Electronico</label>
+                                            <label class="form-label text-uppercase" for="Correo">Correo Electronico</label>
+                                            <input type="email" id="Correo" class="form-control form-control-lg text-secondary" required name="Correo" />
+
                                         </div>
 
                                         <div class="form-outline mb-4">
-                                            <input type="password" id="form2Example27" class="form-control form-control-lg" required name="Password" />
-                                            <label class="form-label" for="form2Example27">Contraseña</label>
+                                            <label class="form-label text-uppercase" for="Password">Contraseña</label>
+                                            <input type="password" id="Password" class="form-control form-control-lg text-secondary" required name="Password" />
                                         </div>
 
                                         @if (ViewData["Mensaje"] != null)
                                         {
 
                                             <div class="form-group">
-                                                <div class="alert alert-danger" role="alert">
+                                                <div class="alert alert-danger text-uppercase" role="alert">
                                                     @ViewData["Mensaje"]
                                                 </div>
                                             </div>
                                         }
 
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                            <button class="btn btn-dark btn-lg btn-block text-uppercase" type="submit">Iniciar Sesión</button>
                                         </div>
 
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">
+                                        <p class="mb-5 pb-lg-2 text-uppercase text-dark">
                                             ¿No tienes una cuenta? <a href="@Url.Action("Register","Auth")"
-                                                                      style="color: #393f81;">Registrate Aqui</a>
+                                                                      class="text-primary text-decoration-none">Registrate Aqui</a>
                                         </p>
-                                        @* <a href="#!" class="small text-muted">Terms of use.</a>
-                                        <a href="#!" class="small text-muted">Privacy policy</a> *@
+
                                     </form>
 
                                 </div>
