--- a/AplicacionWeb/Views/Auth/Register.cshtml
+++ b/AplicacionWeb/Views/Auth/Register.cshtml
@@ -10,53 +10,57 @@
     <meta name="viewport" content="width=device-width" />
     <title>Registrarse</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
 </head>
 <body>
 
-    <section class="vh-100" style="background-color: #9A616D;">
+    <section class="vh-100 bg-light" >
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
-                            <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                     alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+
+                            <div class="col-md-6 col-lg-5 d-none d-md-flex align-items-center">
+                                <img src="/img/Register.jpg"
+                                     alt="login form" class="img-fluid pt-xl-4" style="border-radius: 1rem 0 0 1rem;" />
                             </div>
-                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                                <div class="card-body p-4 p-lg-5 text-black">
 
-                                    <form asp-controller="Auth" asp-action="Register" method="post">
 
-                                        <div class="d-flex align-items-center mb-3 pb-1">
-                                            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center shadow">
+                                <div class="card-body p-3 p-lg-3 text-dark">
+
+                                    <form asp-controller="Auth" asp-action="Register" method="post" novalidate>
+
+                                        <div class="d-flex align-items-center mb-3 pb-1 text-dark">
+                                            <i class="fas fa-cubes fa-2x me-3 " style="color: #ff6219;"></i>
                                             <span class="h1 fw-bold mb-0">Logo</span>
                                         </div>
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Registrarse</h5>
+                                        <h5 class="fw-normal mb-3 pb-3 text-uppercase" style="letter-spacing: 1px;">Registrarse</h5>
 
                                         <div class="form-outline mb-4">
-                                            <input type="text" id="form2Example17" class="form-control form-control-lg" asp-for="Nombre" required />
-                                            <label class="form-label" for="form2Example17">Nombre</label>
+                                            <label class="form-label  text-uppercase" for="Nombre">Nombre</label>
+                                            <input type="text" id="Nombre" class="form-control form-control-lg text-secondary" required asp-for="Nombre" />
+                                        </div>
+                                         
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label text-uppercase" for="Usuario">Usuario</label>
+                                            <input type="text" id="Usuario" class="form-control form-control-lg text-secondary" asp-for="Nombreusuario" required />
                                         </div>
 
                                         <div class="form-outline mb-4">
-                                            <input type="text" id="form2Example17" class="form-control form-control-lg" asp-for="Nombreusuario" required />
-                                            <label class="form-label" for="form2Example17">Usuario</label>
+                                            <label class="form-label text-uppercase" for="Correo">Correo Electronico</label>
+                                            <input type="email" id="Correo" class="form-control form-control-lg text-secondary" required asp-for="Correo" />
                                         </div>
 
                                         <div class="form-outline mb-4">
-                                            <input type="email" id="form2Example17" class="form-control form-control-lg" required asp-for="Correo" />
-                                            <label class="form-label" for="form2Example17">Correo Electronico</label>
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            <input type="password" id="form2Example27" class="form-control form-control-lg" required asp-for="Password" />
-                                            <label class="form-label" for="form2Example27">Password</label>
+                                            <label class="form-label text-uppercase" for="Password">Contraseña</label>
+                                            <input type="password" id="Password" class="form-control form-control-lg text-secondary" required asp-for="Password" />
                                         </div>
 
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Registrarse</button>
+                                            <button class="btn btn-dark btn-lg btn-block text-uppercase" type="submit">Registrarse</button>
                                         </div>
 
                                         @if (ViewData["Mensaje"] != null)
@@ -69,13 +73,11 @@
                                             </div>
                                         }
 
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">
-                                            ¿Ya tienes una cuenta? <a href="@Url.Action("Login","Auth")"
-                                                                      style="color: #393f81;">Inicia Sesión Aqui</a>
+                                        <p class="mb-5 pb-lg-2 text-uppercase text-dark">
+                                            ¿No tienes una cuenta? <a href="@Url.Action("Login","Auth")"
+                                                                      class="text-primary text-decoration-none">Inicia Sesión</a>
                                         </p>
 
-                                        @* <a href="#!" class="small text-muted">Terms of use.</a>
-                                        <a href="#!" class="small text-muted">Privacy policy</a> *@
                                     </form>
 
                                 </div>
