--- a/AplicacionWeb/wwwroot/css/site.css
+++ b/AplicacionWeb/wwwroot/css/site.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
+
 html {
     font-size: 14px;
+    
 }
+
+
 
 @media (min-width: 768px) {
     html {
